# lumena

./: .gitignore  ABLATION_REPORT.md  CLOCK_TRACE.md  CMakeLists.txt  DECISIONS.md  LICENSE  PHASE45_REPORT.md  README.md  SESSION_NOTES.md  VARIANT_C_REPORT.md
apps/: lumena_demo.cpp
auditions/phase45/: mona-seed2024-newworld.mid  mona-seed2024-oldworld.mid  mona-seed30-newworld.mid  mona-seed30-oldworld.mid  mona-seed58-newworld.mid  mona-seed58-oldworld.mid  mona-seed70-newworld.mid  mona-seed70-oldworld.mid
config/: scales.json  settings.json
src/: LumenMelody.cpp  LumenMelody.h  Lumena.cpp  Lumena.h
src/image/: BrightnessGrid.cpp  BrightnessGrid.h  BrightnessSampler.cpp  BrightnessSampler.h  ColorAnalysis.cpp  ColorAnalysis.h  Image.cpp  Image.h  ImageGrid.cpp  ImageGrid.h  Luma.h
src/markov/: MarkovChain.cpp  MarkovChain.h  MelodyChain.cpp  MelodyChain.h  TheoryWeights.cpp  TheoryWeights.h  TransitionMatrix.cpp  TransitionMatrix.h
src/melody/: MelodyGenerator.cpp  MelodyGenerator.h
src/midi/: MidiFileWriter.cpp  MidiFileWriter.h  MidiSequence.cpp  MidiSequence.h
src/scales/: KeySelector.cpp  KeySelector.h  Scale.cpp  Scale.h  ScaleLibrary.cpp  ScaleLibrary.h  ScaleManager.cpp  ScaleManager.h  ScaleType.cpp  ScaleType.h
test/: phase0_baseline.md
tests/: CMakeLists.txt  ColorAnalysisTests.cpp  ImageTests.cpp  KeySelectorTests.cpp  MarkovTests.cpp  MelodyGeneratorTests.cpp  MidiTests.cpp  ScaleTests.cpp  main.cpp  test_util.h
tools/measure/: make_fixtures.py  measure_baseline.py
